load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "image",
    srcs = ["embed_charts.go"],
    embedsrcs = [
        "assets/docker-auth.sh",
        "templates/CHANGING_CHARTS.md",
        "templates/CHART_TEMPLATING.md",
        "templates/README.md",
        "templates/common/ca-setup.sh",
        "templates/common/delete-ca.sh",
        "templates/common/deploy-central-db.sh.tpl",
        "templates/common/port-forward.sh",
        "templates/common/setup-central.sh",
        "templates/common/setup-scanner-v4.sh",
        "templates/common/setup-scanner.sh",
        "templates/common/setup.sh",
        "templates/helm/shared/assets/Red_Hat-Hat_icon.png",
        "templates/helm/shared/assets/StackRox_icon.png",
        "templates/helm/shared/config-templates/scanner-v4-db/pg_hba.conf.default",
        "templates/helm/shared/config-templates/scanner-v4-db/postgresql.conf.default",
        "templates/helm/shared/config-templates/scanner-v4/indexer-config.yaml.tpl",
        "templates/helm/shared/config-templates/scanner-v4/matcher-config.yaml.tpl",
        "templates/helm/shared/config-templates/scanner/config.yaml.tpl",
        "templates/helm/shared/internal/annotations/helm-hook_secret.yaml",
        "templates/helm/shared/internal/annotations/helm-hook_storage.yaml",
        "templates/helm/shared/internal/scanner-config-shape.yaml",
        "templates/helm/shared/internal/scanner-v4-config-shape.yaml",
        "templates/helm/shared/templates/00-injected-ca-bundle.yaml",
        "templates/helm/shared/templates/00-storage-class.yaml",
        "templates/helm/shared/templates/02-scanner-00-serviceaccount.yaml",
        "templates/helm/shared/templates/02-scanner-01-psps.yaml",
        "templates/helm/shared/templates/02-scanner-01-security.yaml",
        "templates/helm/shared/templates/02-scanner-02-db-password-secret.yaml",
        "templates/helm/shared/templates/02-scanner-03-tls-secret.yaml",
        "templates/helm/shared/templates/02-scanner-04-scanner-config.yaml",
        "templates/helm/shared/templates/02-scanner-05-network-policy.yaml",
        "templates/helm/shared/templates/02-scanner-06-deployment.yaml.htpl",
        "templates/helm/shared/templates/02-scanner-07-service.yaml",
        "templates/helm/shared/templates/02-scanner-08-hpa.yaml",
        "templates/helm/shared/templates/02-scanner-v4-00-serviceaccount.yaml",
        "templates/helm/shared/templates/02-scanner-v4-01-psps.yaml",
        "templates/helm/shared/templates/02-scanner-v4-01-security.yaml",
        "templates/helm/shared/templates/02-scanner-v4-02-db-password-secret.yaml",
        "templates/helm/shared/templates/02-scanner-v4-03-db-tls-secret.yaml",
        "templates/helm/shared/templates/02-scanner-v4-03-indexer-tls-secret.yaml",
        "templates/helm/shared/templates/02-scanner-v4-03-matcher-tls-secret.yaml",
        "templates/helm/shared/templates/02-scanner-v4-04-db-config.yaml",
        "templates/helm/shared/templates/02-scanner-v4-04-indexer-config.yaml",
        "templates/helm/shared/templates/02-scanner-v4-04-matcher-config.yaml",
        "templates/helm/shared/templates/02-scanner-v4-05-db-network-policy.yaml",
        "templates/helm/shared/templates/02-scanner-v4-05-indexer-network-policy.yaml",
        "templates/helm/shared/templates/02-scanner-v4-05-matcher-network-policy.yaml",
        "templates/helm/shared/templates/02-scanner-v4-06-db-pvc.yaml",
        "templates/helm/shared/templates/02-scanner-v4-07-db-deployment.yaml",
        "templates/helm/shared/templates/02-scanner-v4-07-indexer-deployment.yaml",
        "templates/helm/shared/templates/02-scanner-v4-07-matcher-deployment.yaml",
        "templates/helm/shared/templates/02-scanner-v4-08-db-service.yaml",
        "templates/helm/shared/templates/02-scanner-v4-08-indexer-service.yaml",
        "templates/helm/shared/templates/02-scanner-v4-08-matcher-service.yaml",
        "templates/helm/shared/templates/02-scanner-v4-09-indexer-hpa.yaml",
        "templates/helm/shared/templates/02-scanner-v4-09-matcher-hpa.yaml",
        "templates/helm/shared/templates/99-scanner-v4-openshift-monitoring.yaml",
        "templates/helm/shared/templates/_certrefresh.tpl",
        "templates/helm/shared/templates/_crypto.tpl",
        "templates/helm/shared/templates/_dict.tpl",
        "templates/helm/shared/templates/_expand.tpl",
        "templates/helm/shared/templates/_format.tpl",
        "templates/helm/shared/templates/_helpers.tpl",
        "templates/helm/shared/templates/_image-pull-secrets.tpl",
        "templates/helm/shared/templates/_images.tpl",
        "templates/helm/shared/templates/_injected-ca-bundle.tpl",
        "templates/helm/shared/templates/_metadata.tpl",
        "templates/helm/shared/templates/_openshift.tpl",
        "templates/helm/shared/templates/_psp.tpl",
        "templates/helm/shared/templates/_pvcs.tpl",
        "templates/helm/shared/templates/_reporting.tpl",
        "templates/helm/shared/templates/_scanner-v4_defaulting.tpl",
        "templates/helm/shared/templates/_scanner-v4_init.tpl.htpl",
        "templates/helm/shared/templates/_scanner-v4_volume.tpl",
        "templates/helm/shared/templates/_scanner_init.tpl.htpl",
        "templates/helm/shared/templates/_set_install_method.tpl.htpl",
        "templates/helm/shared/templates/_storage_classes.tpl",
        "templates/helm/stackrox-central/.gitignore",
        "templates/helm/stackrox-central/.helmignore",
        "templates/helm/stackrox-central/.helmtplignore.htpl",
        "templates/helm/stackrox-central/Chart.yaml.htpl",
        "templates/helm/stackrox-central/README.md.htpl",
        "templates/helm/stackrox-central/config/central/config.yaml.default",
        "templates/helm/stackrox-central/config/central/endpoints.yaml.default",
        "templates/helm/stackrox-central/config/centraldb/pg_hba.conf.default",
        "templates/helm/stackrox-central/config/centraldb/postgresql.conf.default",
        "templates/helm/stackrox-central/config/proxy-config.yaml.default",
        "templates/helm/stackrox-central/internal/bootstrap-defaults.yaml.tpl",
        "templates/helm/stackrox-central/internal/config-shape.yaml",
        "templates/helm/stackrox-central/internal/config.stackrox.io_securitypolicies.yaml",
        "templates/helm/stackrox-central/internal/defaults.yaml.htpl",
        "templates/helm/stackrox-central/internal/expandables.yaml",
        "templates/helm/stackrox-central/internal/platforms/default.yaml",
        "templates/helm/stackrox-central/internal/platforms/gke.yaml",
        "templates/helm/stackrox-central/templates/00-additional-ca.yaml.htpl",
        "templates/helm/stackrox-central/templates/00-image-pull-secret.yaml",
        "templates/helm/stackrox-central/templates/00-proxy-config-secret.yaml",
        "templates/helm/stackrox-central/templates/00-securitypolicy-crd.yaml",
        "templates/helm/stackrox-central/templates/00-stackrox-application.yaml",
        "templates/helm/stackrox-central/templates/00-stackrox-helm-configmap.yaml",
        "templates/helm/stackrox-central/templates/01-central-00-db-serviceaccount.yaml",
        "templates/helm/stackrox-central/templates/01-central-00-serviceaccount.yaml",
        "templates/helm/stackrox-central/templates/01-central-01-license-secret.yaml",
        "templates/helm/stackrox-central/templates/01-central-02-db-psps.yaml",
        "templates/helm/stackrox-central/templates/01-central-02-db-security.yaml",
        "templates/helm/stackrox-central/templates/01-central-02-psps.yaml",
        "templates/helm/stackrox-central/templates/01-central-02-security.yaml",
        "templates/helm/stackrox-central/templates/01-central-03-cloud-credentials-rbac.yaml",
        "templates/helm/stackrox-central/templates/01-central-03-diagnostics-rbac.yaml",
        "templates/helm/stackrox-central/templates/01-central-04-htpasswd-secret.yaml",
        "templates/helm/stackrox-central/templates/01-central-05-db-tls-secret.yaml",
        "templates/helm/stackrox-central/templates/01-central-05-tls-secret.yaml",
        "templates/helm/stackrox-central/templates/01-central-06-default-tls-cert-secret.yaml",
        "templates/helm/stackrox-central/templates/01-central-08-configmap.yaml.htpl",
        "templates/helm/stackrox-central/templates/01-central-08-db-configmap.yaml",
        "templates/helm/stackrox-central/templates/01-central-08-external-db-configmap.yaml",
        "templates/helm/stackrox-central/templates/01-central-09-endpoints-config.yaml",
        "templates/helm/stackrox-central/templates/01-central-10-db-networkpolicy.yaml",
        "templates/helm/stackrox-central/templates/01-central-10-networkpolicy.yaml",
        "templates/helm/stackrox-central/templates/01-central-11-db-pvc.yaml",
        "templates/helm/stackrox-central/templates/01-central-12-central-db.yaml",
        "templates/helm/stackrox-central/templates/01-central-13-deployment.yaml.htpl",
        "templates/helm/stackrox-central/templates/01-central-14-service.yaml",
        "templates/helm/stackrox-central/templates/01-central-15-exposure.yaml",
        "templates/helm/stackrox-central/templates/02-config-controller-00-serviceaccount.yaml",
        "templates/helm/stackrox-central/templates/02-config-controller-01-rbac.yaml",
        "templates/helm/stackrox-central/templates/02-config-controller-02-deployment.yaml",
        "templates/helm/stackrox-central/templates/02-config-controller-03-networkpolicy.yaml",
        "templates/helm/stackrox-central/templates/99-generated-values-secret.yaml",
        "templates/helm/stackrox-central/templates/99-openshift-monitoring.yaml",
        "templates/helm/stackrox-central/templates/NOTES.txt.htpl",
        "templates/helm/stackrox-central/templates/_central_endpoints.tpl",
        "templates/helm/stackrox-central/templates/_central_setup.tpl",
        "templates/helm/stackrox-central/templates/_init.tpl.htpl",
        "templates/helm/stackrox-central/templates/_labels.tpl",
        "templates/helm/stackrox-central/templates/_lookup.tpl",
        "templates/helm/stackrox-central/templates/_stackrox_helm.tpl",
        "templates/helm/stackrox-central/values-private.yaml.example",
        "templates/helm/stackrox-central/values-public.yaml.example.htpl",
        "templates/helm/stackrox-central/values.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/.gitignore",
        "templates/helm/stackrox-secured-cluster/.helmignore",
        "templates/helm/stackrox-secured-cluster/.helmtplignore.htpl",
        "templates/helm/stackrox-secured-cluster/Chart.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/README.md.htpl",
        "templates/helm/stackrox-secured-cluster/feature-flag-values.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/internal/cluster-config.yaml.tpl.htpl",
        "templates/helm/stackrox-secured-cluster/internal/compatibility-translation.yaml",
        "templates/helm/stackrox-secured-cluster/internal/config-shape.yaml",
        "templates/helm/stackrox-secured-cluster/internal/defaults/00-bootstrap.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/internal/defaults/10-env.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/internal/defaults/20-tls-files.yaml",
        "templates/helm/stackrox-secured-cluster/internal/defaults/30-base-config.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/internal/defaults/40-resources.yaml",
        "templates/helm/stackrox-secured-cluster/internal/defaults/50-images.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/internal/defaults/70-scanner-v4.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/internal/defaults/70-scanner.yaml",
        "templates/helm/stackrox-secured-cluster/internal/defaults/whats-this.md",
        "templates/helm/stackrox-secured-cluster/internal/expandables.yaml",
        "templates/helm/stackrox-secured-cluster/scripts/fetch-secrets.sh",
        "templates/helm/stackrox-secured-cluster/scripts/fetched-secrets-bundle-ca-only.yaml.tpl",
        "templates/helm/stackrox-secured-cluster/scripts/fetched-secrets-bundle.yaml.tpl",
        "templates/helm/stackrox-secured-cluster/sensor-chart-upgrade.md.htpl",
        "templates/helm/stackrox-secured-cluster/templates/00-collector-image-pull-secrets.yaml",
        "templates/helm/stackrox-secured-cluster/templates/00-main-image-pull-secrets.yaml",
        "templates/helm/stackrox-secured-cluster/templates/NOTES.txt.htpl",
        "templates/helm/stackrox-secured-cluster/templates/_admission-controller-config.tpl",
        "templates/helm/stackrox-secured-cluster/templates/_admission-controller-defaulting.tpl",
        "templates/helm/stackrox-secured-cluster/templates/_compatibility.tpl",
        "templates/helm/stackrox-secured-cluster/templates/_defaults.tpl",
        "templates/helm/stackrox-secured-cluster/templates/_init-tls-certs.tpl",
        "templates/helm/stackrox-secured-cluster/templates/_init.tpl.htpl",
        "templates/helm/stackrox-secured-cluster/templates/_labels.tpl",
        "templates/helm/stackrox-secured-cluster/templates/_lookup.tpl",
        "templates/helm/stackrox-secured-cluster/templates/_scanner-defaulting.tpl",
        "templates/helm/stackrox-secured-cluster/templates/_stackrox_helm.tpl",
        "templates/helm/stackrox-secured-cluster/templates/additional-ca-sensor.yaml",
        "templates/helm/stackrox-secured-cluster/templates/admission-controller-netpol.yaml",
        "templates/helm/stackrox-secured-cluster/templates/admission-controller-pod-security.yaml",
        "templates/helm/stackrox-secured-cluster/templates/admission-controller-rbac.yaml",
        "templates/helm/stackrox-secured-cluster/templates/admission-controller-secret.yaml",
        "templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml",
        "templates/helm/stackrox-secured-cluster/templates/cluster-config.yaml",
        "templates/helm/stackrox-secured-cluster/templates/cluster-registration-secret.yaml",
        "templates/helm/stackrox-secured-cluster/templates/collector-netpol.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/templates/collector-pod-security.yaml",
        "templates/helm/stackrox-secured-cluster/templates/collector-rbac.yaml",
        "templates/helm/stackrox-secured-cluster/templates/collector-scc.yaml",
        "templates/helm/stackrox-secured-cluster/templates/collector-secret.yaml",
        "templates/helm/stackrox-secured-cluster/templates/collector.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/templates/openshift-monitoring.yaml",
        "templates/helm/stackrox-secured-cluster/templates/sensor-compliance-rbac.yaml",
        "templates/helm/stackrox-secured-cluster/templates/sensor-netpol.yaml",
        "templates/helm/stackrox-secured-cluster/templates/sensor-pod-security.yaml",
        "templates/helm/stackrox-secured-cluster/templates/sensor-rbac.yaml",
        "templates/helm/stackrox-secured-cluster/templates/sensor-secret.yaml",
        "templates/helm/stackrox-secured-cluster/templates/sensor.yaml.htpl",
        "templates/helm/stackrox-secured-cluster/templates/service-ca.yaml",
        "templates/helm/stackrox-secured-cluster/templates/stackrox-helm-configmap.yaml",
        "templates/helm/stackrox-secured-cluster/templates/upgrader-serviceaccount.yaml",
        "templates/helm/stackrox-secured-cluster/values-private-scanner-v4.yaml.example",
        "templates/helm/stackrox-secured-cluster/values-private.yaml.example",
        "templates/helm/stackrox-secured-cluster/values-public-scanner-v4.yaml.example",
        "templates/helm/stackrox-secured-cluster/values-public.yaml.example",
        "templates/helm/stackrox-secured-cluster/values-scanner.yaml.example",
        "templates/helm/stackrox-secured-cluster/values.yaml.htpl",
        "templates/sensor/kubernetes/delete-sensor.sh",
        "templates/sensor/kubernetes/sensor.sh",
        "templates/sensor/openshift/delete-sensor.sh",
        "templates/sensor/openshift/sensor.sh",
    ],
    importpath = "github.com/stackrox/rox/image",
    visibility = ["//visibility:public"],
    deps = [
        "//generated/storage",
        "//image/sensor",
        "//pkg/helm/charts",
        "//pkg/helm/template",
        "//pkg/helm/util",
        "//pkg/k8sutil/k8sobjects",
        "//pkg/namespaces",
        "//pkg/templates",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@sh_helm_helm_v3//pkg/chart",
        "@sh_helm_helm_v3//pkg/chart/loader",
    ],
)

alias(
    name = "go_default_library",
    actual = ":image",
    visibility = ["//visibility:public"],
)

go_test(
    name = "image_test",
    srcs = ["embed_charts_test.go"],
    embed = [":image"],
    deps = [
        "//pkg/helm/charts",
        "//pkg/images/defaults",
        "//pkg/images/defaults/testutils",
        "//pkg/version/testutils",
        "@com_github_stretchr_testify//suite",
        "@sh_helm_helm_v3//pkg/chart",
    ],
)
