load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tools",
    srcs = ["tools.go"],
    importpath = "github.com/stackrox/rox/tools",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":tools",
    visibility = ["//visibility:public"],
)
