load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = ["download.go"],
    importpath = "github.com/stackrox/rox/central/cli",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":cli",
    visibility = ["//visibility:public"],
)
