load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "compliance",
    srcs = ["common.go"],
    importpath = "github.com/stackrox/rox/central/compliance",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":compliance",
    visibility = ["//visibility:public"],
)
