load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "detection",
    srcs = [
        "policy_set.go",
        "policy_set_impl.go",
        "utils.go",
    ],
    importpath = "github.com/stackrox/rox/central/detection",
    visibility = ["//visibility:public"],
    deps = [
        "//central/policy/datastore",
        "//generated/storage",
        "//pkg/detection",
        "//pkg/sac",
        "//pkg/sac/resources",
        "//pkg/set",
    ],
)

alias(
    name = "go_default_library",
    actual = ":detection",
    visibility = ["//visibility:public"],
)

go_test(
    name = "detection_test",
    srcs = [
        "policy_set_impl_test.go",
        "utils_test.go",
    ],
    embed = [":detection"],
    deps = [
        "//central/policy/datastore/mocks",
        "//generated/storage",
        "//pkg/detection",
        "//pkg/detection/mocks",
        "//pkg/protoassert",
        "@com_github_stretchr_testify//require",
        "@com_github_stretchr_testify//suite",
        "@org_uber_go_mock//gomock",
    ],
)
