load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "docs",
    srcs = ["api_http.go"],
    importpath = "github.com/stackrox/rox/central/docs",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:errors"],
)

alias(
    name = "go_default_library",
    actual = ":docs",
    visibility = ["//visibility:public"],
)
